js scripts updated, waves improved

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <title>matharound</title>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/matharound/css/ma.css">
-    <script src="/matharound/js/libs/jquery.min.js"></script>
+    <link rel="stylesheet" href="/css/ma.css">
+    <script src="/js/libs/jquery.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 
 </head>
 <body>
     <div class="content">
         <header class="header">
-            <h1 class="page-header1"><a href="i.html">Matharound</a></h1>
+            <h1 class="page-header1"><a href="/index.html">Matharound</a></h1>
             <h2 class="page-subheader">Beauty is everywhere</h2>
         </header>
 
@@ -20,7 +20,7 @@
                 <div class="col-sm-4 main-section-column">
                     <h3 class="main-section-header">Finite Automata</h3>
                     <div class="mylink-container">
-                        <p class="mylink"><a href="/matharound/pages/finiteautomata.html">Interactive model</a></p>
+                        <p class="mylink"><a href="/pages/finiteautomata.html">Interactive model</a></p>
                     </div>
                 </div>
 
@@ -94,15 +94,15 @@
  -->             <!--    <div class="col-sm-4 main-section-column">
                     <h3 class="main-section-header">N-Body Simulations</h3>
                     <div class="mylink-container">
-                        <p class="mylink"><a href="/matharound/pages/siniteoutomatalarsystem.html">Solar system</a></p>
-                        <p class="mylink"><a href="/matharound/pages/cinitedutomatam.html">Cold Dark matter</a></p>
+                        <p class="mylink"><a href="/pages/siniteoutomatalarsystem.html">Solar system</a></p>
+                        <p class="mylink"><a href="/pages/cinitedutomatam.html">Cold Dark matter</a></p>
                     </div>
                 </div> -->
 
                 <div class="col-sm-4 main-section-column">
                     <h3 class="main-section-header">Waves</h3>
                     <div class="mylink-container">
-                        <p class="mylink"><a href="/matharound/pages/waves.html">Point sources in 2D</a></p>
+                        <p class="mylink"><a href="/pages/waves.html">Point sources in 2D</a></p>
 <!--                         <p class="mylink">Interference</p>
                         <p class="mylink">Double slit experiment</p>
  -->                    </div>
