--- a/pages/finiteautomata.html
+++ b/pages/finiteautomata.html
@@ -3,18 +3,18 @@
     <title>matharound - finite automata</title>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/matharound/css/ma.css">
-    <script src="/matharound/js/libs/jquery.min.js"></script>
+    <link rel="stylesheet" href="/css/ma.css">
+    <script src="/js/libs/jquery.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
-    <script src="/matharound/js/libs/jquery.history.js"></script>
-    <script src="/matharound/js/Canvas.js"></script>
-    <script src="/matharound/js/Utils.js"></script>
-    <script src="/matharound/js/FiniteAutomata.js"></script>
+    <script src="/js/libs/jquery.history.js"></script>
+    <script src="/js/Canvas.js"></script>
+    <script src="/js/Utils.js"></script>
+    <script src="/js/FiniteAutomata.js"></script>
 </head>
 <body>
     <div class="content">
         <header class="header">
-            <h1 class="page-header1"><a href="/matharound/index.html">Matharound</a></h1>
+            <h1 class="page-header1"><a href="/index.html">Matharound</a></h1>
 
             <div style="display:table-row">
                 <h2 class="page-subheader" style="display:table-cell;  white-space: nowrap;">
