--- a/pages/finiteautomata.html
+++ b/pages/finiteautomata.html
@@ -9,6 +9,7 @@
     <script src="/js/libs/jquery.history.js"></script>
     <script src="/js/Canvas.js"></script>
     <script src="/js/Utils.js"></script>
+    <script src="/js/GAnalytics.js"></script>
     <script src="/js/FiniteAutomata.js"></script>
 </head>
 <body>
