--- a/pages/waves.html
+++ b/pages/waves.html
@@ -12,6 +12,7 @@
     <script src="/js/Canvas.js"></script>
     <script src="/js/waves/Sources.js"></script>
     <script src="/js/waves/Field.js"></script>
+    <script src="/js/GAnalytics.js"></script>
 </head>
 <body>
     <div class="content">
