--- a/pages/finiteautomata.html
+++ b/pages/finiteautomata.html
@@ -94,7 +94,10 @@
             Size = Utils.getSize();
             // History.Adapter.bind(window, 'statechange', openpage);
             // History.Adapter.bind(window, 'hashchange', openpage);
-            $(window).on('hashchange', openpage);
+            $(window).on('hashchange', function() {
+                _gaq.push(['_trackPageview',location.pathname + location.search  + location.hash]);
+                openpage();
+            });
             $(window).on('resize', resize);
 
             FA = new FiniteAutomata(Controls.container, Controls.menu);
