google analytics update

--- a/pages/finiteautomata.html
+++ b/pages/finiteautomata.html
@@ -193,7 +193,7 @@
         }
 
         function openpage () {
-            _gaq.push(['_trackPageview',location.pathname + location.search  + location.hash]);
+            ga('send', 'pageview', '' + location.pathname + location.search  + location.hash);
             var state = History.getState();
             FA.display(state.data);
         };
