--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                     <h3 class="main-section-header">Waves</h3>
                     <div class="mylink-container">
                         <p class="mylink"><a href="/pages/waves.html">Point sources in 2D</a></p>
-<!--                         <p class="mylink">Interference</p>
-                        <p class="mylink">Double slit experiment</p>
- -->                    </div>
+                        <p class="mylink"><a href="/pages/interference.html">Interference</a></p>
+<!-- <p class="mylink">Double slit experiment</p> -->
+                    </div>
                 </div>
             <!-- </div> -->
         </div>
