--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
 <!-- <p class="mylink">Double slit experiment</p> -->
                     </div>
                 </div>
+                <div class="col-sm-4 main-section-column">
+                    <h3 class="main-section-header">Fractals</h3>
+                    <div class="mylink-container">
+                        <p class="mylink"><a href="/pages/koch.html">Koch</a></p>
+                        <p class="mylink"><a href="/pages/cesaro.html">Cesaro</a></p>
+<!-- <p class="mylink">Double slit experiment</p> -->
+                    </div>
+                </div>
             <!-- </div> -->
         </div>
 <!--         <div class="wrap">
