--- a/pages/cesaro.html
+++ b/pages/cesaro.html
@@ -17,7 +17,7 @@
 
             <div style="display:table-row">
                 <h2 class="page-subheader" style="display:table-cell;  white-space: nowrap;">
-                    Koch Snowflake
+                    Cesaro (Torn Square)
                 </h2>
             </div>
 
