--- a/pages/cesaro.html
+++ b/pages/cesaro.html
@@ -3,12 +3,12 @@
     <title>matharound - fractals</title>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="file:///C:/dev/ma/matharound-master/css/ma.css">
-    <script src="file:///C:/dev/ma/matharound-master/js/libs/jquery.min.js"></script>
-    <script src="file:///C:/dev/ma/matharound-master/js/libs/d3.v3.min.js"></script>
+    <link rel="stylesheet" href="/css/ma.css">
+    <script src="/js/libs/jquery.min.js"></script>
+    <script src="/js/libs/d3.v3.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
-    <script src="file:///C:/dev/ma/matharound-master/js/Utils.js"></script>
-    <script src="file:///C:/dev/ma/matharound-master/js/fractals/Fractal.js"></script>
+    <script src="/js/Utils.js"></script>
+    <script src="/js/fractals/Fractal.js"></script>
 </head>
 <body>
     <div class="content">
