--- a/pages/cesaro.html
+++ b/pages/cesaro.html
@@ -160,13 +160,16 @@
                 var pageUrl = pageAndHash.substring(1);
                 var parsed = pageUrl.split('|');
                 var torn = parseFloat(parsed[0]);
-                Controls.tornamt.val(torn);
                 var iters = parseInt(parsed[1], 10);
-                Controls.itersamt.val(iters);
-                History.pushState({
-                    torn: torn, iterations: iters
-                }, '', pageAndHash);
+            } else {
+                var torn = Settings.startTorn;
+                var iters = Settings.startIters;
             }
+            Controls.tornamt.val(torn);
+            Controls.itersamt.val(iters);
+            History.pushState({
+                torn: torn, iterations: iters
+            }, '', pageAndHash);
             openpage();
         }
 
