--- a/pages/cesaro.html
+++ b/pages/cesaro.html
@@ -75,7 +75,7 @@
         }
 
         function openpage () {
-          //ga('send', 'pageview', '' + location.pathname + location.search  + location.hash);
+          ga('send', 'pageview', '' + location.pathname + location.search  + location.hash);
           var state = History.getState();
           KS.opts.height = state.data.torn;
           KS.display(state.data.iterations)
