--- a/pages/cesaro.html
+++ b/pages/cesaro.html
@@ -10,6 +10,7 @@
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
     <script src="/js/Utils.js"></script>
     <script src="/js/fractals/Fractal.js"></script>
+    <script src="/js/GAnalytics.js"></script>
 </head>
 <body>
     <div class="content">
