--- a/pages/interference.html
+++ b/pages/interference.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>matharound - waves</title>
+    <title>matharound - waves - interference</title>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/ma.css">
