--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                     <div class="mylink-container">
                         <p class="mylink"><a href="/pages/koch.html">Koch</a></p>
                         <p class="mylink"><a href="/pages/cesaro.html">Cesaro</a></p>
+                        <p class="mylink"><a href="/pages/quad.html">Quadratic</a></p>
 <!-- <p class="mylink">Double slit experiment</p> -->
                     </div>
                 </div>
