--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 <div class="col-sm-4 main-section-column">
                     <h3 class="main-section-header">Finite Automata</h3>
                     <div class="mylink-container">
-                        <p class="mylink"><a href="/pages/finiteautomata.html">Interactive model</a></p>
+                        <p class="mylink"><a href="/pages/cellularautomata.html">Interactive model</a></p>
+                        <p class="mylink"><a href="/pages/cellularautomataconstructor.html">Constructor</a></p>
                     </div>
                 </div>
 
