--- a/pages/cellularautomataconstructor.html
+++ b/pages/cellularautomataconstructor.html
@@ -3,10 +3,10 @@
     <title>matharound - cellular automata - constructor</title>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="file:///C:/dev/ma/matharound-master/css/ma.css">
+    <link rel="stylesheet" href="/css/ma.css">
     <script src="/js/libs/jquery.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
-    <script src="/js.libs/jquery.history.js"></script>
+    <script src="/js/libs/jquery.history.js"></script>
     <script src="/js/Canvas.js"></script>
     <script src="/js/Utils.js"></script>
     <script src="/js/libs/d3.v3.min.js"></script>
