--- a/pages/cellularautomataconstructor.html
+++ b/pages/cellularautomataconstructor.html
@@ -13,6 +13,9 @@
     <script src="/js/GAnalytics.js"></script>
     <script src="/js/automata/CellularAutomata.js"></script>
     <script src="/js/automata/CellularAutomataConstructor.js"></script>
+    <script src="/js/controls/ControlledInput.js"></script>
+    <script src="/js/controls/Dropdown.js"></script>
+    <script src="/js/controls/ControlsLib.js"></script>   
 </head>
 <body>
     <div class="content">
